# Chat-App

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  clientapplication.cpp  clientapplication.h  main.cpp  networkcomponent.cpp  networkcomponent.h  uicomponent.cpp  uicomponent.h
src/core/: CMakeLists.txt
src/core/communication/: broadcaster.cpp
src/core/include/common/: iapplication.h  icomponent.h  threadsafequeue.h
src/core/include/communication/: applicationevents.h  broadcaster.h  eventrelay.h  events.h  guievents.h  hostevents.h  internalevent.h
src/core/include/net/: client.h  host.h  isocket.h  message.h  server.h
src/core/include/ui/: appgui.h  bootlayout.h  chatlayout.h  irenderer.h  openglrenderer.h  participantslayout.h  uilayout.h  uiutils.h
src/core/net/: client.cpp  host.cpp  message.cpp  server.cpp  socketfactory.cpp  socketfactory.h  socketimpl.cpp  socketimpl.h  utils.h
src/core/ui/: appgui.cpp  bootlayout.cpp  chatlayout.cpp  openglrenderer.cpp  participantslayout.cpp  uiutils.cpp
src/server/: CMakeLists.txt  main.cpp  serverapplication.cpp  serverapplication.h  servercomponent.cpp  servercomponent.h
